AJAX Fully implemented

--- a/board.html
+++ b/board.html
@@ -1,4 +1,4 @@
-<!--
+﻿<!--
 Name       :Brendon King
 Class      :CS 2550
 Title      :Battleship/board.html
@@ -26,7 +26,7 @@ Description:Semester project for CS 2550 at Utah Valley University.
                 <button id="save-game">SAVE GAME</button>
             </div>
             <div class="column">
-                <button id="login-button" onclick="displayLogin()">LOGIN</button>
+                <button id="login-button">LOGIN</button>
                 <button id="clear-button">CLEAR DATA</button>
             </div>
         </div>
