--- a/login.html
+++ b/login.html
@@ -18,6 +18,6 @@
     <br>
     <button id="confirm-login">Login</button>
     <button id="cancel-operation">Cancel</button>
-    <div id="debug"></div>
+    <p id="debug" style="color:red"></p>
 </body>
 </html>
