--- a/board.html
+++ b/board.html
@@ -21,18 +21,19 @@ Description:Semester project for CS 2550 at Utah Valley University.
         <h4>GAME MANAGEMENT</h4>
         <div class="row">
             <div class="column">
+                <h4>GAME CONTROLS</h4>
                 <button id="start-game">START GAME</button>
                 <button id="load-game">LOAD GAME</button>
                 <button id="save-game">SAVE GAME</button>
             </div>
             <div class="column">
+                <h4>LOGIN MANAGEMENT</h4>
                 <button id="login-button">LOGIN</button>
                 <button id="clear-button">CLEAR DATA</button>
+                <br />
+                <p id="login-status">NOT LOGGED IN!</p>
             </div>
         </div>
-
-
-
         <h4>SHIP PLACEMENT</h4>
         <div class="row">
             <div class="column">
@@ -68,7 +69,6 @@ Description:Semester project for CS 2550 at Utah Valley University.
                 <label>Orientation:</label>
             </div>
         </div>
-        
     </div>
     <br />
     <div class="row">
