Squashed bug regarding login not updating

--- a/board.html
+++ b/board.html
@@ -30,8 +30,7 @@ Description:Semester project for CS 2550 at Utah Valley University.
                 <h4>LOGIN MANAGEMENT</h4>
                 <button id="login-button">LOGIN</button>
                 <button id="clear-button">CLEAR DATA</button>
-                <br />
-                <p id="login-status">NOT LOGGED IN!</p>
+                <div id="login-status">USER: </div>
             </div>
         </div>
         <h4>SHIP PLACEMENT</h4>
