--- a/board.html
+++ b/board.html
@@ -18,7 +18,6 @@ Description:Semester project for CS 2550 at Utah Valley University.
 <body>
     <h1 align="center">PLAY BATTLESHIP!</h1>
     <div class="controls">
-        <h4>GAME MANAGEMENT</h4>
         <div class="row">
             <div class="column">
                 <h4>GAME CONTROLS</h4>
@@ -30,7 +29,7 @@ Description:Semester project for CS 2550 at Utah Valley University.
                 <h4>LOGIN MANAGEMENT</h4>
                 <button id="login-button">LOGIN</button>
                 <button id="clear-button">CLEAR DATA</button>
-                <div id="login-status">USER: </div>
+                <div id="login-status">User: </div>
             </div>
         </div>
         <h4>SHIP PLACEMENT</h4>
