Cleaned up controller.js and fixed config files

--- a/board.html
+++ b/board.html
@@ -72,7 +72,7 @@ Description:Semester project for CS 2550 at Utah Valley University.
     <div class="row">
         <div class="grid">
             <h4>PLAYER BOARD</h4>
-            <table id="playerBoard" align="center"></table>
+            <table id="playerGrid" align="center"></table>
             <br />
             <table align="center">
                 <tr>
@@ -84,7 +84,7 @@ Description:Semester project for CS 2550 at Utah Valley University.
         </div>
         <div class="grid">
             <h4>COMPUTER BOARD</h4>
-            <table id="computerBoard" align="center"></table>
+            <table id="computerGrid" align="center"></table>
             <br />
             <table align="center">
                 <tr>
