Updated board.html to pull additional info from config.JSON

--- a/board.html
+++ b/board.html
@@ -17,6 +17,7 @@ Description:Semester project for CS 2550 at Utah Valley University.
 </head>
 <body>
     <h1 align="center">PLAY BATTLESHIP!</h1>
+    <p id="developer-name" align="center"></p>
     <div class="controls">
         <div class="row">
             <div class="column">
