--- a/board.html
+++ b/board.html
@@ -16,8 +16,7 @@ Description:Semester project for CS 2550 at Utah Valley University.
     <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
 </head>
 <body>
-    <h1 align="center">PLAY BATTLESHIP!</h1>
-    <p id="developer-name" align="center"></p>
+    <h1 align="center">PLAY BATTLESHIP!</h1><p id="developer-name" align="center"></p>
     <div class="controls">
         <div class="row">
             <div class="column">
