--- a/board.html
+++ b/board.html
@@ -8,7 +8,7 @@ Description:Semester project for CS 2550 at Utah Valley University.
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Ready the Fleet!</title>
     <link rel="icon" href="media/images/battleship-icon.png">
