--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@ Description:Semester project for CS 2550 at Utah Valley University.
             <p>The rules of the game have been provided to you, in case any sort of refresher was needed.  Your ships can be placed horizontally or vertically, but they cannot be placed diagonally.</p>
             <p>If you want more information on the game as a whole (not necessarily online), then click the link <a href="https://en.wikipedia.org/wiki/Battleship_(game)" target="_blank">here</a> for more information</p>
             <p>Click on the link <a href="board.html" target="_blank">here</a> to begin setting up the board and start playing!</p>
+            <p>Click <a href="documentation.html">here</a> to go to documentation.html</p>
         </div>
         <div class="column">
             <p></p>
-            <img src="media/images/battleship.jpg" alt="Image failed to load." border="5" width="425">
+            <img src="media/images/battleship.jpg" alt="Image failed to load." border="5" width="640">
             <div>A Navy Battleship - Wikipedia 2017</div>
         </div>
     </div>
