Finished documentation.html

--- a/board.html
+++ b/board.html
@@ -22,8 +22,8 @@ Description:Semester project for CS 2550 at Utah Valley University.
             <div class="column">
                 <h4>GAME CONTROLS</h4>
 
-                <button id="load-game">LOAD GAME</button>
-                <button id="save-game">SAVE GAME</button>
+                <button id="load-game">LOAD LAYOUT</button>
+                <button id="save-game">SAVE LAYOUT</button>
             </div>
             <div class="column">
                 <h4>LOGIN MANAGEMENT</h4>
