--- a/documentation.html
+++ b/documentation.html
@@ -31,6 +31,8 @@ Description :Semester project for CS 2550 at Utah Valley University
     <p>The game will continue in this manner, updating the boards and alerting the player until either the computer fleet is destroyed or the player fleet is destroyed, during which and alert will pop up on the screen (to halt play and to draw the players' attention that the game is over.) indicating the results of the match.</p>
     <p>After the player acknowledges the alert, a new button will appear near the top of the screen allowing the game to re-initialize and select a brand new ship configuration for the computer.</p>
     <h3 align="center">EXTRA CREDIT</h3>
-    <p>Extra credit information will go here.</p>
+    <p>The two HTML5 components for the program are as follows:</p>
+    <p>The game plays audio on player moves to help indicate to the player if a square has been hit, or if the square was a miss.  Sound will sometimes not play if moves are made too quickly; this is a limitation on the sound files being used rather than the code itself.</p>
+    <p>The game is able to load and remember player ship configuration for future games; this will speed up the game setup and allow for more play.  Configuration is stored in LocalStorage and accessed anytime someone pushes the "Load Layout" button.</p>
 </body>
 </html>
