Changed fonts and removed unused animation config

--- a/documentation.html
+++ b/documentation.html
@@ -13,6 +13,7 @@ Description :Semester project for CS 2550 at Utah Valley University
     <meta http-equiv="x-ua-compatible" content="IE=edge">
     <title>Project Documentation</title>
     <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu" />
     <link rel="icon" href="media/images/battleship-icon.png">
 </head>
 <body>
