--- a/board.html
+++ b/board.html
@@ -14,6 +14,7 @@ Description:Semester project for CS 2550 at Utah Valley University.
     <link rel="icon" href="media/images/battleship-icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css" />
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu" />
 </head>
 <body>
     <h1 align="center">PLAY BATTLESHIP!</h1><p id="developer-name" align="center"></p>
