--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Login</title>
     <link type="text/css" rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu" />
     <script src="scripts/site/login.js"></script>
 </head>
 <body>
